WIP. Spacing and label placing needs to be fixed

--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@
 
 :root {
     --green: #5FC963;
+    --gray: #9D9D9D;
 }
 
 .section-1 {
